Fixed bug for mobile devices
Since page height was absolute, the submit button on contact page was being squashed.
Changed height spec to min-height instead.

--- a/frontend/pages/content/styles.css
+++ b/frontend/pages/content/styles.css
@@ -1,5 +1,5 @@
 #page {
-    height: 90vh;
+    min-height: 90vh;
     width: 75%;
     margin: 2em auto;
 }
